css/styles.css
/* ... */
/* The slider */

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--slider-background-color);
  -webkit-transition: 0.4s;
  transition: 0.4s;
  transition: outline-color 0s;
}

.slider::before {
  position: absolute;
  content: "";
  height: 15px;
  width: 15px;
  background-color: var(--slider-unchecked-color);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: var(--slider-checked-color);
}

input:focus + .slider {
  box-shadow: 0 0 1px var(--slider-checked-color);
  outline: var(--outline);
}

input:checked + .slider::before {
  -webkit-transform: translateX(15px);
  -ms-transform: translateX(15px);
  transform: translateX(15px);
}

/* Rounded sliders */

.slider.round {
  border-radius: 30px;
}

.slider.round::before {
  border-radius: 50%;
}

/* Notification settings */

#notifications-interval:disabled,
#break-time-interval:disabled,
input:disabled + .slider {
  background-color: var(--disabled-input-bground);
}

/** Common window styles **/

.common-window {
  font-family: 'Montserrat', sans-serif;
  padding-right: 10px;
  padding-left: 10px;
  padding-bottom: 10px;
  width: 100%;
  height: 90%;
}

.common-window .header-title {
  font-size: 25px;
  border-bottom: 4px solid var(--table-total-border);
}

.common-window .window-tab {
  padding-top: 10px;
  border-bottom: 1px solid var(--tab-waiver-border);
}

.common-window .tab-content {
  padding-top: 10px;
}

.common-window p.header-help {
  font-variant-caps: all-petite-caps;
  font-size: 15px;
  margin-bottom: 0px;
}

.common-window .section-title {
  font-size: 20px;
  color: var(--title-color);
  margin-bottom: 5px;
  margin-top: 15px;
  border-bottom: 1px solid var(--table-total-border);
}

.common-window input, .common-window select, .common-window option {
  color: var(--page-color);
  background-color: var(--page-bground);
}

.common-window input[type="time" i]::-webkit-calendar-picker-indicator {
  background-image: var(--datepicker-icon);
}

.common-window input[type="date" i]::-webkit-calendar-picker-indicator {
  background-image: var(--calendar-icon);
}

/* Preferences page styles */

#preferences-window select,
#preferences-window option,
#preferences-window input {
  font-variant-caps: all-petite-caps;
  border: none;
  height: inherit;
  line-height: normal;
}

#preferences-window .weekdays-selector input {
  display: none;
}

#preferences-window .weekdays-selector input[type=checkbox] + label {
  font-variant-caps: all-petite-caps;
  display: inline-block;
  border-radius: 10px;
  background: var(--weekday-background);
  height: 40px;
  width: 45px;
  margin-right: 3px;
  line-height: 40px;
  text-align: center;
  cursor: pointer;
  user-select: none;
}

#preferences-window .weekdays-selector input[type=checkbox]:checked + label {
  background: var(--weekday-selected);
  color: #fff;
}

#preferences-window input[type=text]:invalid {
  color: rgb(255, 71, 71);
}

#preferences-window .flex-box {
  display: flex;
  height: 25px;
  justify-content: space-between;
}

#preferences-window p {
  font-variant-caps: all-petite-caps;
  text-align: left;
}

/* Styles for Right Alignment of Select */
#preferences-window .selects-right {
  text-align: right;
}

#preferences-window select.selects-right {
  text-align-last: right;
}

#preferences-window select.selects-right option {
  direction: rtl;
}

/* Styles for Right Alignment of input type date */
#preferences-window input[type="date"].date-right::-webkit-datetime-edit {
  text-align: right;
  position: relative;
  left: 25px;
}

#preferences-window #hours-per-day, #break-time-interval {
  text-align: right;
}

#preferences-window i {
  margin-inline-start: 0em;
  margin-inline-end: 0.3em;
  width: 1.5ch;
  text-align: center;
}

/* Waiver page styles */

#workday-waiver-window .section-title {
  margin-bottom: 15px;
  margin-top: 30px;
}

#workday-waiver-window input {
  border: none;
}

#workday-waiver-window .container {
  padding-left: 0;
  padding-right: 0;
}

#workday-waiver-window table {
  font-size: 12px;
}

#workday-waiver-window thead {
  font-weight: bold;
}

#table-foot-helper {
  padding-top: 8px;
  font-weight: bold;
  text-align: center;
}

#workday-waiver-window th, #workday-waiver-window td {
  padding-right: 5px;
  padding-left: 5px;
}

#workday-waiver-window .waive-button {
  opacity: 0.9;
  width: 100%;
  height: 24px;
  border: none;
  color: var(--punch-color);
  background-color: var(--punch-bground);
}

#workday-waiver-window .waive-button:disabled {
  opacity: 0.5;
  color: var(--punch-disable-bground);
}

#workday-waiver-window #waiver-list-table,
#workday-waiver-window #holiday-list-table {
  width: 100%;
}

#workday-waiver-window .list-date-header {
  min-width: 80px;
}

#workday-waiver-window a.nav-link:not(.active) {
  color: var(--page-color);
  border-bottom: 1px solid var(--tab-waiver-border);
}

#workday-waiver-window a.nav-link.active {
  color: var(--tab-font-color);
  background-color: var(--tab-waiver-color);
  border: 1px solid var(--tab-waiver-border);
}

#workday-waiver-window input.delete-btn {
  background-image: var(--delete-icon);
  background-repeat: no-repeat;
  background-position: center;
}

/** Flexible view related styles **/

html[data-view='flexible'] .calendar-table-header {
  display: flow-root;
  border-bottom: 2px solid var(--table-border);
  width: 90%;
  margin: 5px auto 0 auto;
}

html[data-view='flexible'] .calendar-table-header .header-day,
html[data-view='flexible'] .calendar-table-header .header-empty,
html[data-view='flexible'] .calendar-table-header .header-day-total {
  font-size: 16px;
  font-weight: bold;
}

html[data-view='flexible'] .calendar-table-header .header-day {
  float: left;
  margin-left: 25px;
}

html[data-view='flexible'] .calendar-table-header .header-day-total {
  float: right;
  margin-right: 22px;
}

html[data-view='flexible'] .row-time {
  margin: auto;
}
/* ... */

